feat: update page title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/svg+xml" href="/logo.svg"/>
   <link rel="stylesheet" href="/src/assets/styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vite + React</title>
+  <title>Henna Software</title>
 </head>
 
 <body class="bg-slate-900">
